--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.BTL_ANDNC_QuanLyDatDoAn"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.OrderHistory"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.HistoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.CartActivity"
             android:exported="false" />
         <activity
@@ -23,16 +29,13 @@
             android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".Activity.SignupActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.LoginActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".Activity.BaseActivity"
             android:exported="false" />
@@ -44,9 +47,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
     </application>
 
 </manifest>
